# VapourSynth-SRMD-ncnn-Vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml  c-cpp.yml
src/: generate_shader_comp_header.cmake  main.cpp  srmd.cpp  srmd.h  srmd.hpp  srmd_postproc.comp  srmd_postproc_tta.comp  srmd_preproc.comp  srmd_preproc_tta.comp
